@@ -69,6 +69,7 @@ rb-detach-instruction=Detach information window
 rb-disabled-abbrev=(D)
 rb-equipment-categories=Equipment categories
 rb-equipment-category=Equipment category
+rb-equipment=Equipment
 rb-expand=Expand
 rb-favorites=Favorites
 rb-fixed-recipe=Fixed recipe
@@ -125,6 +126,7 @@ rb-open-quick-ref-window=Open quick reference window
 rb-pages=Pages
 rb-per-second-suffix=/ s
 rb-pin-instruction=Keep open
+rb-place-as-equipment-result=Place as equipment result
 rb-placed-by=Placed by
 rb-place-result=Place result
 rb-prerequisite-of=Prerequisite of
@@ -188,6 +190,7 @@ rb-show-made-in-in-quick-ref=Show "made in" in quick reference GUI
 rb-show-unresearched=Show unresearched objects
 rb-size=Size
 rb-stack-size=Stack size
+rb-take-result=Take result
 rb-tech-level-desc=The level of this infinite technology to show data for.
 rb-tech-level=Level
 rb-technology=Technology
@@ -197,6 +200,7 @@ rb-time-per-unit=Time per unit
 rb-toggle-completed=Toggle completed
 rb-tooltips=Tooltips
 rb-unlocked-by=Unlocked by
+rb-unlocks-equipment=Unlocks equipment
 rb-unlocks-fluids=Unlocks fluids
 rb-unlocks-items=Unlocks items
 rb-unlocks-machines=Unlocks machines
