@@ -2,6 +2,9 @@
 Version: 3.2.0
 Date: ????
   Features:
+    - Added new pages:
+      - Equipment category: All equipment and items belonging to each category
+      - Equipment: Size, take result, and unlocked by for each equipment
     - Shift + click on a recipe with one product to view the product's page
     - Using the inspect hotkey will attempt to open the info page relative to the currently open GUI
       - Only works on vanilla GUIs (custom mod GUIs do not support relative anchoring)
